[gd_scene load_steps=14 format=2]

[ext_resource path="res://Nivel3.gd" type="Script" id=1]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://img/fondo3.png" type="Texture" id=3]
[ext_resource path="res://img/luna.png" type="Texture" id=4]
[ext_resource path="res://Tileset.tres" type="TileSet" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://EnemigoVolador.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemigo.tscn" type="PackedScene" id=9]
[ext_resource path="res://ROBOFIND audios/Ambiente final.ogg" type="AudioStream" id=10]
[ext_resource path="res://ROBOFIND audios/Jefe Final V2 bajo.ogg" type="AudioStream" id=11]
[ext_resource path="res://EnemigoFinal.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 253.921, 252.605 )

[node name="Nivel3" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]
layer = -2
offset = Vector2( 0, -300 )
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, -300 )

[node name="Sprite" parent="ParallaxBackground/ParallaxLayer" index="0"]
texture = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Luna" type="Sprite" parent="CanvasLayer"]
position = Vector2( 210.18, 92.7263 )
texture = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
format = 1
tile_data = PoolIntArray( -4194351, 3, 0, -4194350, 3, 0, -4194349, 3, 0, -4194348, 3, 0, -4194347, 3, 0, -4194346, 3, 0, -4194345, 3, 0, -4194344, 3, 0, -4194343, 3, 0, -4194342, 3, 0, -4194341, 3, 0, -4194340, 3, 0, -4194339, 3, 0, -4194338, 3, 0, -4194337, 3, 0, -4194336, 3, 0, -4194335, 3, 0, -4194334, 3, 0, -4194333, 3, 0, -4194332, 3, 0, -4194331, 3, 0, -4194330, 3, 0, -4194329, 3, 0, -4194328, 3, 0, -4194327, 3, 0, -4194326, 3, 0, -4194325, 3, 0, -4194324, 3, 0, -4194323, 3, 0, -4194322, 3, 0, -4194321, 3, 0, -4194320, 3, 0, -4194319, 3, 0, -4194318, 3, 0, -4194317, 3, 0, -4194316, 3, 0, -4194315, 3, 0, -4194314, 3, 0, -4194313, 3, 0, -4128815, -1073741821, 0, -4063279, -1073741821, 0, -3997743, -1073741821, 0, -3932207, -1073741821, 0, -3866671, -1073741821, 0, -3801135, -1073741821, 0, -3735599, -1073741821, 0, -3801064, 3, 0, -3801063, 3, 0, -3801062, 3, 0, -3801061, 3, 0, -3801060, 3, 0, -3801059, 3, 0, -3801058, 3, 0, -3801057, 3, 0, -3801056, 3, 0, -3801055, 3, 0, -3801054, 3, 0, -3670063, -1073741821, 0, -3604527, -1073741821, 0, -3538991, -1073741821, 0, -3473455, -1073741821, 0, -3407919, -1073741821, 0, -3473330, -2147483645, 0, -3342383, -1073741821, 0, -3407794, -2147483645, 0, -3276847, -1073741821, 0, -3342316, -1073741821, 0, -3342298, -1073741821, 0, -3342258, -2147483645, 0, -3211311, -1073741821, 0, -3211303, 3, 0, -3211302, 3, 0, -3211301, 3, 0, -3211300, 3, 0, -3211299, 3, 0, -3211298, 3, 0, -3211297, 3, 0, -3211296, 3, 0, -3211295, 3, 0, -3211294, 3, 0, -3211293, 3, 0, -3211292, 3, 0, -3211291, 3, 0, -3211290, 3, 0, -3211289, 3, 0, -3211288, 3, 0, -3211287, 3, 0, -3211286, 3, 0, -3211285, 3, 0, -3211284, 3, 0, -3211283, 3, 0, -3211282, 3, 0, -3211281, 3, 0, -3211280, 3, 0, -3211279, 3, 0, -3211278, 3, 0, -3211277, 3, 0, -3211276, 3, 0, -3211275, 3, 0, -3211274, 3, 0, -3211273, 3, 0, -3211272, 3, 0, -3211271, 3, 0, -3211270, 3, 0, -3211269, 3, 0, -3211268, 3, 0, -3211267, 3, 0, -3211266, 3, 0, -3211265, 3, 0, -3276800, 3, 0, -3276799, 3, 0, -3276798, 3, 0, -3276797, 3, 0, -3276796, 3, 0, -3276795, 3, 0, -3276794, 3, 0, -3276793, 3, 0, -3276792, 3, 0, -3276791, 3, 0, -3276790, 3, 0, -3276789, 3, 0, -3276788, 3, 0, -3276787, 3, 0, -3276786, 3, 0, -3276785, 3, 0, -3276784, 3, 0, -3276783, 3, 0, -3276782, 3, 0, -3276781, 3, 0, -3276780, 3, 0, -3276779, 3, 0, -3276778, 3, 0, -3276777, 3, 0, -3276776, 3, 0, -3276775, 3, 0, -3276774, 3, 0, -3276773, 3, 0, -3276772, 3, 0, -3276771, 3, 0, -3276770, 3, 0, -3276769, 3, 0, -3276768, 3, 0, -3276767, 3, 0, -3276766, 3, 0, -3276765, 3, 0, -3276764, 3, 0, -3276763, 3, 0, -3276762, 3, 0, -3276761, 3, 0, -3276760, 3, 0, -3276759, 3, 0, -3276758, 3, 0, -3276757, 3, 0, -3276756, 3, 0, -3276755, 3, 0, -3276754, 3, 0, -3276753, 3, 0, -3276752, 3, 0, -3276751, 3, 0, -3276750, 3, 0, -3276749, 3, 0, -3276748, 3, 0, -3276747, 3, 0, -3276746, 3, 0, -3276745, 3, 0, -3276744, 3, 0, -3276743, 3, 0, -3276742, 3, 0, -3276741, 3, 0, -3276740, 3, 0, -3276722, -2147483645, 0, -3145775, -1073741821, 0, -3145767, -1610612733, 0, -3145742, -1073741821, 0, -3211186, -2147483645, 0, -3080239, -1073741821, 0, -3080231, -1610612733, 0, -3080206, -1073741821, 0, -3145650, -2147483645, 0, -3014703, -1073741821, 0, -3014695, -1610612733, 0, -3014670, -1073741821, 0, -3080126, 3, 0, -3080125, 3, 0, -3080124, 3, 0, -3080123, 3, 0, -3080114, -2147483645, 0, -2949167, -1073741821, 0, -2949159, -1610612733, 0, -2949134, -1073741821, 0, -3014578, -2147483645, 0, -2883631, -1073741821, 0, -2883623, -1610612733, 0, -2883598, -1073741821, 0, -2949042, -2147483645, 0, -2818095, -1073741821, 0, -2818087, -1610612733, 0, -2818062, -1073741821, 0, -2883508, 3, 0, -2883507, 3, 0, -2883506, -2147483645, 0, -2752559, -1073741821, 0, -2752551, -1610612733, 0, -2752526, -2147483645, 0, -2817970, -2147483645, 0, -2687023, -1073741821, 0, -2752436, 3, 0, -2752435, 3, 0, -2752434, -2147483645, 0, -2621487, -1073741821, 0, -2686898, -2147483645, 0, -2555951, -1073741821, 0, -2621369, 3, 0, -2621368, 3, 0, -2621367, 3, 0, -2621366, 3, 0, -2621365, 3, 0, -2621364, 3, 0, -2621363, 3, 0, -2621362, -2147483645, 0, -2490415, -1073741821, 0, -2555826, -2147483645, 0, -2424879, -1073741821, 0, -2490294, 3, 0, -2490293, 3, 0, -2490292, 3, 0, -2490291, 3, 0, -2490290, -2147483645, 0, -2359343, -1073741821, 0, -2424810, 3, 0, -2424809, 3, 0, -2424808, 3, 0, -2424807, 3, 0, -2424806, 3, 0, -2424805, 3, 0, -2424804, 3, 0, -2424803, 3, 0, -2424802, 3, 0, -2424801, 3, 0, -2424800, 3, 0, -2424799, 3, 0, -2424798, 3, 0, -2424797, 3, 0, -2424796, 3, 0, -2424795, 3, 0, -2424794, 3, 0, -2424793, 3, 0, -2424792, 3, 0, -2424791, 3, 0, -2424790, 3, 0, -2424789, 3, 0, -2424788, 3, 0, -2424787, 3, 0, -2424786, 3, 0, -2424785, 3, 0, -2424784, 3, 0, -2424783, 3, 0, -2424782, 3, 0, -2424781, 3, 0, -2424780, 3, 0, -2424779, 3, 0, -2424778, 3, 0, -2424777, 3, 0, -2424776, 3, 0, -2424775, 3, 0, -2424774, 3, 0, -2424773, 3, 0, -2424772, 3, 0, -2424754, -2147483645, 0, -2293807, -1073741821, 0, -2359292, 3, 0, -2359291, 3, 0, -2359290, 3, 0, -2359289, 3, 0, -2359228, 3, 0, -2359227, 3, 0, -2359226, 3, 0, -2359225, 3, 0, -2359224, 3, 0, -2359223, 3, 0, -2359222, 3, 0, -2359221, 3, 0, -2359220, 3, 0, -2359219, 3, 0, -2359218, -2147483645, 0, -2228271, -1073741821, 0, -2293682, -2147483645, 0, -2162735, -1073741821, 0, -2162693, 3, 0, -2162692, 3, 0, -2162691, 3, 0, -2162690, 3, 0, -2228146, -2147483645, 0, -2097199, -1073741821, 0, -2162610, -2147483645, 0, -2031663, -1073741821, 0, -2097074, -2147483645, 0, -1966127, -1073741821, 0, -2031538, -2147483645, 0, -1900591, -1073741821, 0, -1900583, 3, 0, -1900582, 3, 0, -1900581, 3, 0, -1900580, 3, 0, -1900579, 3, 0, -1900578, 3, 0, -1900577, 3, 0, -1900576, 3, 0, -1900575, 3, 0, -1900574, 3, 0, -1900573, 3, 0, -1900572, 3, 0, -1900571, 3, 0, -1900570, 3, 0, -1900569, 3, 0, -1900568, 3, 0, -1900567, 3, 0, -1900566, 3, 0, -1900565, 3, 0, -1900564, 3, 0, -1900563, 3, 0, -1900562, 3, 0, -1900561, 3, 0, -1900560, 3, 0, -1900559, 3, 0, -1900558, 3, 0, -1900557, 3, 0, -1900556, 3, 0, -1900555, 3, 0, -1900554, 3, 0, -1966002, -2147483645, 0, -1835055, -1073741821, 0, -1835047, -1610612733, 0, -1835022, -2147483645, 0, -1900466, -2147483645, 0, -1769519, -1073741821, 0, -1769511, -1610612733, 0, -1769486, -2147483645, 0, -1834930, -2147483645, 0, -1703983, -1073741821, 0, -1703975, -1610612733, 0, -1703950, -2147483645, 0, -1703945, 3, 0, -1703944, 3, 0, -1703943, 3, 0, -1703942, 3, 0, -1769394, -2147483645, 0, -1638447, -1073741821, 0, -1638439, -1610612733, 0, -1638414, -2147483645, 0, -1703858, -2147483645, 0, -1572911, -1073741821, 0, -1572903, -1610612733, 0, -1572878, -2147483645, 0, -1638400, 3, 0, -1638399, 3, 0, -1638398, 3, 0, -1638397, 3, 0, -1638388, 3, 0, -1638387, 3, 0, -1638386, 3, 0, -1638385, 3, 0, -1638384, 3, 0, -1638383, 3, 0, -1638382, 3, 0, -1638381, 3, 0, -1638380, 3, 0, -1638379, 3, 0, -1638378, 3, 0, -1638377, 3, 0, -1638376, 3, 0, -1638375, 3, 0, -1638374, 3, 0, -1638373, 3, 0, -1638372, 3, 0, -1638371, 3, 0, -1638370, 3, 0, -1638369, 3, 0, -1638368, 3, 0, -1638367, 3, 0, -1638366, 3, 0, -1638365, 3, 0, -1638364, 3, 0, -1638363, 3, 0, -1638362, 3, 0, -1638361, 3, 0, -1638360, 3, 0, -1638359, 3, 0, -1638358, 3, 0, -1638357, 3, 0, -1638356, 3, 0, -1638355, 3, 0, -1638354, 3, 0, -1638353, 3, 0, -1638352, 3, 0, -1638351, 3, 0, -1638350, 3, 0, -1638349, 3, 0, -1638348, 3, 0, -1638347, 3, 0, -1638346, 3, 0, -1638345, 3, 0, -1638344, 3, 0, -1638343, 3, 0, -1638342, 3, 0, -1638341, 3, 0, -1638340, 3, 0, -1638322, -2147483645, 0, -1507375, -1073741821, 0, -1507367, -1610612733, 0, -1507342, -2147483645, 0, -1572842, -2147483645, 0, -1572830, -2147483645, 0, -1572786, -2147483645, 0, -1441839, -1073741821, 0, -1441831, -1610612733, 0, -1441806, -2147483645, 0, -1507306, -2147483645, 0, -1507294, -2147483645, 0, -1507250, -2147483645, 0, -1376303, -1073741821, 0, -1376295, -1610612733, 0, -1376270, -2147483645, 0, -1441770, -2147483645, 0, -1441758, -2147483645, 0, -1441714, -2147483645, 0, -1310767, -1073741821, 0, -1310759, -1610612733, 0, -1310734, -2147483645, 0, -1376195, 3, 0, -1376194, 3, 0, -1376193, 3, 0, -1376192, 3, 0, -1376191, 3, 0, -1376190, 3, 0, -1376189, 3, 0, -1376178, -2147483645, 0, -1245231, -1073741821, 0, -1245223, -1610612733, 0, -1245198, -2147483645, 0, -1310642, -2147483645, 0, -1179695, -1073741821, 0, -1179687, -1610612733, 0, -1179662, -2147483645, 0, -1245106, -2147483645, 0, -1114159, -1073741821, 0, -1114151, -1610612733, 0, -1114126, -2147483645, 0, -1179570, -2147483645, 0, -1048623, -1073741821, 0, -1048615, -1610612733, 0, -1048590, -2147483645, 0, -1048589, 2, 0, -1114039, 3, 0, -1114038, 3, 0, -1114037, 3, 0, -1114036, 3, 0, -1114035, 3, 0, -1114034, -2147483645, 0, -983087, -1073741821, 0, -983079, -1610612733, 0, -983054, -2147483645, 0, -983053, -2147483648, 0, -983052, -2147483648, 0, -1048498, -2147483645, 0, -917551, -1073741821, 0, -917543, -1610612733, 0, -917518, -2147483645, 0, -917517, 1610612736, 0, -917516, -2147483648, 0, -917515, 2, 0, -982962, -2147483645, 0, -852015, -1073741821, 0, -852007, -1610612733, 0, -851982, -2147483645, 0, -851981, 1610612736, 0, -851980, -2147483648, 0, -851979, -2147483648, 0, -917426, -2147483645, 0, -786479, -1073741821, 0, -786471, -1610612733, 0, -786446, -2147483645, 0, -786445, 1610612736, 0, -786444, -2147483648, 0, -786443, -2147483648, 0, -786442, -2147483648, 0, -851946, -2147483645, 0, -851934, -2147483645, 0, -851923, 536870912, 0, -851904, 3, 0, -851903, 3, 0, -851902, 3, 0, -851901, 3, 0, -851900, 3, 0, -851899, 3, 0, -851890, -2147483645, 0, -720943, -1073741821, 0, -720935, -1610612733, 0, -720910, -2147483645, 0, -720909, 1610612736, 0, -720908, -2147483648, 0, -720907, -2147483648, 0, -720906, -2147483648, 0, -720905, -2147483648, 0, -786410, -2147483645, 0, -786398, -2147483645, 0, -786387, 536870912, 0, -786386, 536870912, 0, -786385, 536870912, 0, -786354, -2147483645, 0, -655407, -1073741821, 0, -655399, -1610612733, 0, -655374, -2147483645, 0, -655373, 1610612736, 0, -655372, -2147483648, 0, -655371, 1610612736, 0, -655370, -2147483648, 0, -655369, -2147483648, 0, -720874, -2147483645, 0, -720862, -2147483645, 0, -720851, 536870912, 0, -720850, 536870912, 0, -720849, 536870912, 0, -720848, 536870912, 0, -720818, -2147483645, 0, -589871, -1073741821, 0, -589863, -1610612733, 0, -589838, -2147483645, 0, -589837, 1610612736, 0, -589836, -2147483648, 0, -589835, 1610612736, 0, -589834, -2147483648, 0, -589833, -2147483648, 0, -655358, 3, 0, -655357, 3, 0, -655356, 3, 0, -655355, 3, 0, -655354, 3, 0, -655353, 3, 0, -655352, 3, 0, -655351, 3, 0, -655350, 3, 0, -655349, 3, 0, -655348, 536870915, 0, -655347, 536870915, 0, -655346, 536870915, 0, -655345, 536870915, 0, -655344, 536870915, 0, -655343, 536870915, 0, -655342, 536870915, 0, -655341, 536870915, 0, -655340, 536870915, 0, -655339, 536870915, 0, -655338, 536870915, 0, -655337, 536870915, 0, -655336, 536870915, 0, -655335, 536870915, 0, -655334, 536870915, 0, -655333, 536870915, 0, -655332, 536870915, 0, -655331, 536870915, 0, -655330, 536870915, 0, -655329, 536870915, 0, -655328, 536870915, 0, -655327, 536870915, 0, -655326, 536870915, 0, -655325, 536870915, 0, -655324, 536870915, 0, -655323, 536870915, 0, -655322, 536870915, 0, -655321, 536870915, 0, -655320, 536870915, 0, -655319, 536870915, 0, -655318, 536870915, 0, -655317, 536870915, 0, -655316, 536870915, 0, -655315, 536870915, 0, -655314, 536870915, 0, -655313, 536870915, 0, -655312, 536870915, 0, -655311, 536870915, 0, -655310, 536870915, 0, -655309, 536870915, 0, -655308, 536870915, 0, -655307, 536870915, 0, -655306, 536870915, 0, -655305, 536870915, 0, -655304, 536870915, 0, -655303, 536870915, 0, -655302, 536870915, 0, -655301, 536870915, 0, -655300, 536870915, 0, -655282, -2147483645, 0, -524335, -1073741821, 0, -524327, -1610612733, 0, -524302, -2147483645, 0, -524301, 1610612736, 0, -524300, -2147483648, 0, -524299, 1610612736, 0, -524298, -2147483648, 0, -524297, -2147483648, 0, -524296, -2147483648, 0, -524295, 2, 0, -589778, 536870912, 0, -589777, 536870912, 0, -589776, 536870912, 0, -589775, 536870912, 0, -589774, 536870912, 0, -589764, 0, 0, -589746, -2147483645, 0, -458799, -1073741821, 0, -458791, -1610612733, 0, -458766, -2147483645, 0, -458765, 1610612736, 0, -458764, -2147483648, 0, -458763, 1610612736, 0, -458762, -2147483648, 0, -458761, -2147483648, 0, -458760, -2147483648, 0, -458759, -2147483648, 0, -458758, 536870912, 0, -458757, 536870912, 0, -524242, 536870912, 0, -524241, 536870912, 0, -524240, 536870912, 0, -524239, 536870912, 0, -524238, 536870912, 0, -524228, 0, 0, -524210, -2147483645, 0, -393278, 3, 0, -393277, 3, 0, -393276, 3, 0, -393275, 3, 0, -393274, 3, 0, -393273, 3, 0, -393272, 3, 0, -393271, 3, 0, -393270, 3, 0, -393269, 3, 0, -393268, 3, 0, -393267, 3, 0, -393266, 3, 0, -393265, 3, 0, -393264, 3, 0, -393263, 3, 0, -393255, -1610612733, 0, -393230, -2147483645, 0, -393229, 1610612736, 0, -393228, 1610612736, 0, -393227, 1610612736, 0, -393226, -2147483648, 0, -393225, -2147483648, 0, -393224, -2147483648, 0, -393223, 536870912, 0, -393222, 536870912, 0, -393221, 536870912, 0, -393220, 536870912, 0, -393219, 2, 0, -458705, 536870912, 0, -458704, 536870912, 0, -458703, 536870912, 0, -458701, 536870912, 0, -458692, 0, 0, -458674, -2147483645, 0, -327742, -1073741821, 0, -327694, -2147483645, 0, -327693, 0, 0, -327692, 0, 0, -327691, 0, 0, -327690, -2147483648, 0, -327689, 1610612736, 0, -327688, -2147483648, 0, -327687, -2147483648, 0, -327686, 536870912, 0, -327685, 536870912, 0, -327684, 536870912, 0, -327683, -2147483648, 0, -393169, 536870912, 0, -393168, 536870912, 0, -393167, 536870912, 0, -393155, 0, 0, -393138, -2147483645, 0, -262206, -1073741821, 0, -262158, -2147483645, 0, -262157, 0, 0, -262156, 0, 0, -262155, 0, 0, -262154, -2147483648, 0, -262153, -2147483648, 0, -262152, -2147483648, 0, -262151, 536870912, 0, -262150, 536870912, 0, -262149, 536870912, 0, -262148, -2147483648, 0, -262147, -2147483648, 0, -327632, 536870912, 0, -327620, 0, 0, -327619, 0, 0, -327602, -2147483645, 0, -196670, -1073741821, 0, -196622, -2147483645, 0, -196621, 0, 0, -196620, 0, 0, -196619, 0, 0, -196618, -2147483648, 0, -196617, -2147483648, 0, -196616, -2147483648, 0, -196615, 536870912, 0, -196614, 536870912, 0, -196613, 536870912, 0, -196612, -2147483648, 0, -196611, -2147483648, 0, -196610, -2147483648, 0, -196609, -2147483648, 0, -262144, 2, 0, -262097, 536870912, 0, -262096, 536870912, 0, -262088, 0, 0, -262084, 0, 0, -262083, 0, 0, -262082, 0, 0, -262066, -2147483645, 0, -131134, -1073741821, 0, -131086, -2147483645, 0, -131085, 0, 0, -131084, 0, 0, -131083, -2147483648, 0, -131082, -2147483648, 0, -131081, -2147483648, 0, -131080, -2147483648, 0, -131079, 536870912, 0, -131078, 536870912, 0, -131077, 536870912, 0, -131076, 536870912, 0, -131075, 536870912, 0, -131074, -2147483648, 0, -131073, -2147483648, 0, -196608, -2147483648, 0, -196607, -2147483648, 0, -196561, 536870912, 0, -196552, 0, 0, -196551, 0, 0, -196547, 0, 0, -196546, 0, 0, -196545, 0, 0, -196530, -2147483645, 0, -65598, -1073741821, 0, -65550, -2147483645, 0, -65549, 0, 0, -65548, 0, 0, -65547, -2147483648, 0, -65546, -2147483648, 0, -65545, -2147483648, 0, -65544, -2147483648, 0, -65543, 536870912, 0, -65542, 536870912, 0, -65541, 536870912, 0, -65540, 536870912, 0, -65539, -2147483648, 0, -65538, -2147483648, 0, -65537, -2147483648, 0, -131072, -2147483648, 0, -131071, -2147483648, 0, -131070, -2147483648, 0, -131069, -2147483648, 0, -131068, 2, 0, -131025, 536870912, 0, -131015, 0, 0, -131014, 0, 0, -131010, 0, 0, -131009, 0, 0, -130994, -2147483645, 0, -62, -1073741821, 0, -14, -2147483645, 0, -13, 0, 0, -12, 0, 0, -11, -2147483648, 0, -10, -2147483648, 0, -9, -2147483648, 0, -8, -2147483648, 0, -7, 536870912, 0, -6, 536870912, 0, -5, 536870912, 0, -4, 0, 0, -3, -2147483648, 0, -2, -2147483648, 0, -1, -2147483648, 0, -65536, -2147483648, 0, -65535, -2147483648, 0, -65534, -2147483648, 0, -65533, -2147483648, 0, -65532, -2147483648, 0, -65489, 536870912, 0, -65478, 0, 0, -65477, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, -65458, -2147483645, 0, 65474, -1073741821, 0, 65522, -2147483645, 0, 65523, 536870912, 0, 65524, 0, 0, 65525, -2147483648, 0, 65526, -2147483648, 0, 65527, -2147483648, 0, 65528, -2147483648, 0, 65529, 536870912, 0, 65530, 536870912, 0, 65531, 536870912, 0, 65532, -2147483648, 0, 65533, 536870912, 0, 65534, 0, 0, 65535, 3, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 3, 0, 47, 536870912, 0, 59, 0, 0, 63, 0, 0, 64, 0, 0, 65, 0, 0, 78, -2147483645, 0, 131010, -1073741821, 0, 131058, -2147483645, 0, 131059, 0, 0, 131060, 0, 0, 131061, -2147483648, 0, 131062, -2147483648, 0, 131063, -2147483648, 0, 131064, -2147483648, 0, 131065, -2147483648, 0, 131066, 536870912, 0, 131067, 536870912, 0, 131068, -2147483648, 0, 131069, 0, 0, 131070, 1610612737, 0, 65583, 536870912, 0, 65595, 0, 0, 65596, 0, 0, 65600, 0, 0, 65601, 0, 0, 65602, 0, 0, 65614, -2147483645, 0, 196546, -1073741821, 0, 196594, -2147483645, 0, 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, -2147483648, 0, 196599, -2147483648, 0, 196600, -2147483648, 0, 196601, 536870912, 0, 196602, 536870912, 0, 196603, 536870912, 0, 196604, 0, 0, 196605, 0, 0, 131118, 536870912, 0, 131119, 536870912, 0, 131132, 0, 0, 131133, 0, 0, 131137, 0, 0, 131138, 0, 0, 131139, 0, 0, 131150, -2147483645, 0, 262082, -1073741821, 0, 262130, -2147483645, 0, 262131, 0, 0, 262132, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, -2147483648, 0, 262136, -2147483648, 0, 262137, 536870912, 0, 262138, 536870912, 0, 262139, 536870912, 0, 262140, -2147483648, 0, 262141, 0, 0, 262142, 2, 0, 196637, 3, 0, 196638, 3, 0, 196639, 3, 0, 196640, 3, 0, 196654, 536870912, 0, 196669, 0, 0, 196674, 0, 0, 196675, 0, 0, 196676, 0, 0, 196677, 0, 0, 196686, -2147483645, 0, 327618, -1073741821, 0, 327666, -2147483645, 0, 327667, 0, 0, 327668, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, -2147483648, 0, 327672, 0, 0, 327673, -2147483648, 0, 327674, 536870912, 0, 327675, 536870912, 0, 327676, -2147483648, 0, 327677, 0, 0, 327678, 0, 0, 262190, 536870912, 0, 262206, 0, 0, 262207, 0, 0, 262211, 0, 0, 262212, 0, 0, 262213, 0, 0, 262214, 0, 0, 262222, -2147483645, 0, 393154, -1073741821, 0, 393202, -2147483645, 0, 393203, 0, 0, 393204, 0, 0, 393205, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 536870912, 0, 393209, -2147483648, 0, 393210, 0, 0, 393211, -2147483648, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 327719, 536870915, 0, 327720, 536870915, 0, 327721, 536870915, 0, 327722, 536870915, 0, 327723, 536870915, 0, 327724, 536870915, 0, 327726, 536870912, 0, 327743, 0, 0, 327744, 0, 0, 327745, 0, 0, 327748, 0, 0, 327749, 0, 0, 327750, 0, 0, 327751, 0, 0, 327758, -2147483645, 0, 458690, -1073741821, 0, 458738, -2147483645, 0, 458739, 0, 0, 458740, 0, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 536870912, 0, 458745, -2147483648, 0, 458746, -2147483648, 0, 458747, -2147483648, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 536870913, 0, 393261, 536870912, 0, 393262, 536870912, 0, 393280, 0, 0, 393282, 0, 0, 393283, 0, 0, 393286, 0, 0, 393287, 0, 0, 393294, -2147483645, 0, 524226, -1073741821, 0, 524274, -2147483645, 0, 524275, 0, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, -2147483648, 0, 524282, -2147483648, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458787, 3, 0, 458788, 3, 0, 458789, 3, 0, 458797, 536870912, 0, 458798, 536870912, 0, 458817, 0, 0, 458818, 0, 0, 458820, 0, 0, 458821, 0, 0, 458823, 0, 0, 458824, 0, 0, 458825, 0, 0, 458830, -2147483645, 0, 589762, -1073741821, 0, 589810, -2147483645, 0, 589811, 0, 0, 589812, 0, 0, 589813, 0, 0, 589814, 0, 0, 589815, 0, 0, 589816, 0, 0, 589817, -2147483648, 0, 589818, -2147483648, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524333, 536870912, 0, 524334, 536870912, 0, 524355, 0, 0, 524356, 0, 0, 524358, 0, 0, 524360, 0, 0, 524361, 0, 0, 524362, 0, 0, 524363, 0, 0, 524366, -2147483645, 0, 655298, -1073741821, 0, 655346, -2147483645, 0, 655347, 0, 0, 655348, 0, 0, 655349, 0, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, -2147483648, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 2, 0, 589869, 536870912, 0, 589870, 536870912, 0, 589893, 0, 0, 589894, 0, 0, 589895, 0, 0, 589896, 0, 0, 589897, 0, 0, 589898, 0, 0, 589899, 0, 0, 589900, 0, 0, 589902, -2147483645, 0, 720834, 3, 0, 720835, 3, 0, 720836, 3, 0, 720837, 3, 0, 720838, 3, 0, 720839, 3, 0, 720840, 3, 0, 720841, 3, 0, 720842, 3, 0, 720843, 3, 0, 720844, 3, 0, 720845, 3, 0, 720846, 3, 0, 720847, 3, 0, 720848, 3, 0, 720849, 3, 0, 720850, 3, 0, 720851, 3, 0, 720852, 3, 0, 720853, 3, 0, 720854, 3, 0, 720855, 3, 0, 720856, 3, 0, 720857, 3, 0, 720858, 3, 0, 720859, 3, 0, 720860, 3, 0, 720861, 3, 0, 720862, 3, 0, 720863, 3, 0, 720864, 3, 0, 720865, 3, 0, 720866, 3, 0, 720867, 3, 0, 720868, 3, 0, 720869, 3, 0, 720870, 3, 0, 720871, 3, 0, 720872, 3, 0, 720873, 3, 0, 720874, 3, 0, 720875, 3, 0, 720876, 3, 0, 720877, 3, 0, 720878, 3, 0, 720879, 3, 0, 720880, 3, 0, 720881, 3, 0, 720882, 3, 0, 720883, 3, 0, 720884, 3, 0, 720885, 3, 0, 720886, 3, 0, 720887, 3, 0, 720888, 3, 0, 720889, 3, 0, 720890, 3, 0, 720891, 3, 0, 720892, 3, 0, 720893, 3, 0, 720894, 3, 0, 720895, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 536870915, 0, 655380, 536870915, 0, 655381, 536870915, 0, 655382, 536870915, 0, 655383, 536870915, 0, 655384, 536870915, 0, 655385, 536870915, 0, 655386, 536870915, 0, 655387, 536870915, 0, 655388, 536870915, 0, 655389, 536870915, 0, 655390, 536870915, 0, 655391, 536870915, 0, 655392, 536870915, 0, 655393, 536870915, 0, 655394, 536870915, 0, 655395, 536870915, 0, 655396, 536870915, 0, 655397, 536870915, 0, 655398, 536870915, 0, 655399, 536870915, 0, 655400, 536870915, 0, 655401, 536870915, 0, 655402, 536870915, 0, 655403, 536870915, 0, 655404, 536870915, 0, 655405, 536870912, 0, 655406, 536870912, 0, 655407, 536870912, 0, 655431, 0, 0, 655432, 0, 0, 655433, 0, 0, 655434, 0, 0, 655435, 0, 0, 655436, 0, 0, 655437, 0, 0, 655438, -2147483645, 0, 786385, -1073741821, 0, 786393, -1073741821, 0, 720940, 536870912, 0, 720941, 536870912, 0, 720969, 0, 0, 720970, 0, 0, 720971, 0, 0, 720972, 0, 0, 720973, 0, 0, 851921, -1073741821, 0, 851929, -1073741821, 0, 786476, 536870912, 0, 786477, 536870912, 0, 786509, 0, 0, 917457, -1073741821, 0, 917465, -1073741821, 0, 852012, 536870912, 0, 852013, 536870912, 0, 852045, 0, 0, 852046, 0, 0, 982993, -1073741821, 0, 983001, -1073741821, 0, 917548, 536870912, 0, 917549, 536870912, 0, 1048529, -1073741821, 0, 1048537, -1073741821, 0, 983084, 536870912, 0, 983085, 536870912, 0, 1114065, -1073741821, 0, 1114073, -1073741821, 0, 1048619, 536870912, 0, 1048620, 536870912, 0, 1048621, 536870912, 0, 1179601, -1073741821, 0, 1179609, -1073741821, 0, 1114155, 536870912, 0, 1114156, 536870912, 0, 1114157, 536870912, 0, 1245137, -1073741821, 0, 1245145, -1073741821, 0, 1179690, 536870912, 0, 1179691, 536870912, 0, 1179692, 536870912, 0, 1179693, 536870912, 0, 1310673, -1073741821, 0, 1310681, -1073741821, 0, 1245226, 536870912, 0, 1245227, 536870912, 0, 1245228, 536870912, 0, 1376209, -1073741821, 0, 1376217, -1073741821, 0, 1310762, 536870912, 0, 1310764, 536870912, 0, 1441745, -1073741821, 0, 1441753, -1073741821, 0, 1376297, 536870912, 0, 1376298, 536870912, 0, 1376299, 536870912, 0, 1507281, -1073741821, 0, 1507289, -1073741821, 0, 1572817, -1073741821, 0, 1638353, -1073741821, 0, 1703889, -1073741821, 0, 1769425, -1073741821, 0 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 305.777, 475.078 )

[node name="Enemigos" type="Node2D" parent="."]

[node name="EnemigoVolador" parent="Enemigos" instance=ExtResource( 8 )]
position = Vector2( 1836.63, -1424.54 )

[node name="EnemigoVolador2" parent="Enemigos" instance=ExtResource( 8 )]
position = Vector2( 1752.76, -2188.62 )

[node name="EnemigoVolador3" parent="Enemigos" instance=ExtResource( 8 )]
position = Vector2( 3462.62, -2160.66 )

[node name="EnemigoVolador4" parent="Enemigos" instance=ExtResource( 8 )]
position = Vector2( 2995.6, -2906.9 )

[node name="EnemigoVolador5" parent="Enemigos" instance=ExtResource( 8 )]
position = Vector2( 3391.61, -2902.24 )

[node name="EnemigoVolador7" parent="Enemigos" instance=ExtResource( 8 )]
position = Vector2( 72.4636, -3767.14 )

[node name="EnemigoVolador6" parent="Enemigos" instance=ExtResource( 8 )]
position = Vector2( 3755.01, -2902.24 )

[node name="Enemigo5" parent="Enemigos" instance=ExtResource( 9 )]
position = Vector2( 106.613, -1732.03 )

[node name="Enemigo6" parent="Enemigos" instance=ExtResource( 9 )]
position = Vector2( 1712.03, -3321.07 )

[node name="Enemigo7" parent="Enemigos" instance=ExtResource( 9 )]
position = Vector2( 2236.25, -3312.88 )

[node name="Enemigo8" parent="Enemigos" instance=ExtResource( 9 )]
position = Vector2( 1886.09, -3865.36 )

[node name="Enemigo3" parent="Enemigos" instance=ExtResource( 9 )]
position = Vector2( 2580.54, -744.327 )

[node name="Enemigo4" parent="Enemigos" instance=ExtResource( 9 )]
position = Vector2( 4220.51, -930.687 )

[node name="Ambiente" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="PeleaJefe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="BossArea" type="Area2D" parent="."]
position = Vector2( -2712.98, -650.523 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossArea"]
shape = SubResource( 1 )

[node name="EnemigoFinal" parent="." instance=ExtResource( 12 )]
position = Vector2( -1307.29, 250.236 )
[connection signal="cambia_vida" from="Player" to="." method="_on_Player_cambia_vida"]
[connection signal="body_entered" from="BossArea" to="." method="_on_BossArea_body_entered"]

[editable path="ParallaxBackground"]
